# Recommendation-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/recsys/: __init__.py  __main__.py  cli.py  config.py  data.py  evaluation.py  model.py
src/src/recsys/: __init__.py
