[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-project"
version = "0.1.0"
description = "MovieLens recommendation system reference project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightfm>=1.17",
    "numpy>=1.21",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "typer[all]>=0.9",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.scripts]
recsys = "recsys.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
